--- a/css/app.css
+++ b/css/app.css
@@ -108,6 +108,9 @@ th.large-4 {
 th.large-4.first {
   padding-left: 16px; }
 
+th.large-4.last {
+  padding-right: 16px; }
+
 th.large-6 {
   width: 334px;
   padding-left: 8px;
@@ -127,14 +130,6 @@ th.large-6.last {
 .collapse th.large-6.first,
 .collapse th.large-6.last {
   width: 358px; }
-
-th.large-8 {
-  width: 450.66667px;
-  padding-left: 8px;
-  padding-right: 8px; }
-
-th.large-8.last {
-  padding-right: 16px; }
 
 th.large-12 {
   width: 684px;
@@ -378,27 +373,27 @@ table.button.go-website.radius {
   margin: 65px 0;
   background-color: #00569C !important; }
 
-.navigation {
-  background: #00569C; }
+.header-text {
+  vertical-align: middle; }
+  .header-text p {
+    margin-bottom: 0 !important; }
 
-.navigation p {
-  color: #ffff;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 22px;
-  width: 65%;
-  margin: 26px 15px; }
+.navigation .button.go-website.radius {
+  background-color: unset !important; }
+
+.navigation th {
+  text-align: center !important; }
+
+.navigation .go-website {
+  display: inline-block; }
 
 .logo {
-  text-align: center; }
+  text-align: center;
+  vertical-align: middle; }
 
 .logo img {
   display: block;
-  margin: auto;
-  margin: 50px; }
-
-.navigation p, .go-website {
-  display: inline-block; }
+  margin: auto; }
 
 .main {
   background: #fff; }
@@ -408,7 +403,7 @@ p.main-text {
   font-style: italic;
   font-weight: 700;
   font-size: 14px;
-  margin: 60px 40px !important; }
+  margin: 40px !important; }
 
 .suggestion-text {
   line-height: 22px;
@@ -444,7 +439,8 @@ p.main-text {
   margin-bottom: 0 !important; }
 
 .advantage-list ul {
-  padding-left: 50px !important; }
+  padding-left: 50px !important;
+  padding-right: 40px; }
 
 li.list-item {
   list-style: circle; }
@@ -551,14 +547,12 @@ span.dots :hover {
 
 @media only screen and (max-width: 430px) {
   .logo img {
-    margin: 65px !important; }
-  .navigation p {
-    width: 100% !important;
+    margin: 45px auto !important; }
+  .header-text p {
     text-align: center !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important; }
+    line-height: 22px; }
   table.button.go-website.radius {
-    margin: 30px 73px !important; }
+    margin: 40px 0 0 !important; }
   .footer .social-media .button img {
     height: 12px !important;
     width: 12px !important; } }
