--- a/css/app.css
+++ b/css/app.css
@@ -1514,6 +1514,7 @@ table.button.tiny table td, table.button.tiny table a {
   padding: 4px !important; }
 
 table.button table td a {
+  font-weight: unset;
   font-size: 15px; }
 
 .header-text {
